dump IO.node(URL)