@@ -26,6 +26,8 @@ import static org.junit.Assert.fail;
 
 import java.io.FileNotFoundException;
 import java.io.IOException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.util.List;
 
@@ -84,25 +86,25 @@ public class IOTest {
     }
     
     @Test
-    public void nodeForUrl() throws IOException {
-        URL url;
+    public void nodeForUri() throws IOException, URISyntaxException {
+        URI uri;
         Node node;
         IO io;
         
         io = new IO();
-        url = new URL("http://foo.bar:1234/foo");
-        node = io.node(url);
+        uri = new URI("http://foo.bar:1234/foo");
+        node = io.node(uri);
         assertTrue(node instanceof WebdavNode);
         assertEquals("foo", node.getPath());
-        assertEquals(url.toString(), ((WebdavNode) node).getUrl());
+        assertEquals(uri.toString(), ((WebdavNode) node).getUrl());
 
-        url = new URL("file:/home/mhm/bar.txt");
-        node = io.node(url);
+        uri = new URI("file:/home/mhm/bar.txt");
+        node = io.node(uri);
         assertTrue(node instanceof FileNode);
         assertEquals("home/mhm/bar.txt", node.getPath());
 
-        url = getClass().getClassLoader().getResource("java/lang/Object.class");
-        node = io.node(url);
+        uri = getClass().getClassLoader().getResource("java/lang/Object.class").toURI();
+        node = io.node(uri);
         assertTrue(node instanceof ZipNode);
         assertEquals("java/lang/Object.class", node.getPath());
     }
@@ -217,7 +219,7 @@ public class IOTest {
         io.locateClasspathItem(Object.class).checkFile();
         io.locateClasspathItem("/java/lang/Object.class").checkFile();
         io.locateClasspathItem("/java/lang/Object.class").checkFile();
-        assertEquals("foo bar.jar", io.locateClasspathItem(new URL("jar:file:/foo%20bar.jar!/some/file.txt"), "/some/file.txt").getPath());
+        assertEquals("foo%20bar.jar", io.locateClasspathItem(new URL("jar:file:/foo%20bar.jar!/some/file.txt"), "/some/file.txt").getPath());
         assertEquals("foo+bar.jar", io.locateClasspathItem(new URL("jar:file:/foo+bar.jar!/some/file.txt"), "/some/file.txt").getPath());
         try {
             assertNull(io.locateClasspathItem("/nosuchresource"));
